# vmod-otel-test

./: CHANGES.rst  README.md  README.rst  configure.ac  example.vcl
src/: Makefile.am  otel_glue.cc  otel_glue.h  vmod_otel.c  vmod_otel.vcc
src/tests/: test01.vtc
